--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxtjs/supabase": "^2.0.3",
-    "nuxt": "^4.3.1",
+    "@nuxtjs/supabase": "^1.1.6",
+    "echarts": "^5.5.0",
+    "nuxt": "^3.12.4",
+    "nuxt-echarts": "^1.0.1",
     "scrollreveal": "^4.0.9",
-    "vue": "^3.5.27",
-    "vue-router": "^4.6.4"
+    "vue": "^3.4.0",
+    "vue-router": "^4.2.0"
   },
-  "packageManager": "pnpm@10.29.2+sha512.bef43fa759d91fd2da4b319a5a0d13ef7a45bb985a3d7342058470f9d2051a3ba8674e629672654686ef9443ad13a82da2beb9eeb3e0221c87b8154fff9d74b8",
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.14.0"
-  }
+    "@nuxt/ui": "^2.14.0",
+    "tailwindcss": "3.4.17",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.16"
+  },
+  "packageManager": "pnpm@10.29.2"
 }
