--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   // https://nuxt.com/docs/guide/concepts/typescript
   "files": [],
   "references": [
+        {
+      "path": "./.nuxt/tsconfig.json"
+    },
     {
       "path": "./.nuxt/tsconfig.app.json"
     },
