--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/supabase": "^1.1.6",
     "echarts": "^5.5.0",
     "https-proxy-agent": "^7.0.6",
+    "marked": "^17.0.2",
     "nuxt": "^3.12.4",
     "nuxt-echarts": "^1.0.1",
     "scrollreveal": "^4.0.9",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@nuxt/ui": "^2.14.0",
+    "@tailwindcss/typography": "^0.5.19",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "3.4.17"
